.gitignore: Don't ignore dot files
File starting with a dot are currently ignored, which gives us trouble
when adding .gitignore or .gitattributes.

Integrate adsApp/src/.gitignore into .gitignore to make in easier to maintain.

TODO: Find a pattern to ignore files from eclipse

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
-*.pyc
 *~
-builddir/
-adsApp/.*
-.*
+*.pyc
 *.bak
+builddir/
+adsApp/src/Debug
 TwinCAT/demo_project/MCAG_Base_Project/_Boot*
 TwinCAT/demo_project/MCAG_Base_Project/_Configure*
 TwinCAT/demo_project/MCAG_Base_Project/MCAG_PLC_Project/_CompileInfo*
