Normalize the line endings
Some files had been commited with CRLF, which causes different trouble under
Linux and Windows.
Normalize all of them.

Change .gitattributes to allow LF in the repo and CRLF in the worktree for
Winndows.

Since the attribute parser in Git does not handle TwinCAT/ as we would need it,
add TwinCAT/.gitattribute to prevent all files here from eol conversion.

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,19 @@
-# Default no CRLF conversion
-* -text
+#Which files need CRLF handling
+
+# TwinCAT files are defined in 
+# TwinCAT/.gitattributes
+
+# Default is auto
+* text=auto
+
+# We can help Git, because we now about some file extensions
+*.bat  text eol=crlf
+# cmd as used for EPICS, not for Windows
+*.cmd  text eol=lf
+*.gif  -text
+*.opi  -text
+*.png  -text
+*.ppt* -text  
+*.py   text eol=lf
+*.sh   text eol=lf
+
