Break out ADS code; Compile under non-EEE
- Break out the code for the ADS lib into a separate directory.
- make a softlink into for those files which we need.
- clone & checkout from github.com/Beckhoff/ADS.git

- Adjust the Makefiles to be able to compile & run under non-EEE,
 "classic EPICS", tested under Ubuntu

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,17 @@
+\#*#
 *~
 *.pyc
 *.bak
-builddir/
+ADS/
+adsApp/Db/O.*
+adsApp/src/O.*
 adsApp/src/Debug
+bin/
+builddir/
+configure/O.*
+db/
+dbd/
+iocBoot/iocads/
 TwinCAT/demo_project/MCAG_Base_Project/_Boot*
 TwinCAT/demo_project/MCAG_Base_Project/_Configure*
 TwinCAT/demo_project/MCAG_Base_Project/MCAG_PLC_Project/_CompileInfo*
