--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "ADS"]
 	path = ADS
-	url = https://github.com/EuropeanSpallationSource/ADS.git
+	url = https://github.com/Beckhoff/ADS.git
+	branch = 7df1d60f8bf088a2be718323d27aa2156f7d7b0f
