Add class for parameter info. Add utility file for general functions.

--- a/Makefile.EEE
+++ b/Makefile.EEE
@@ -35,6 +35,8 @@ SOURCES = \
   adsApp/src/cmd.c \
   adsApp/src/cmd_EAT.c \
   adsApp/src/adsAsynPortDriver.cpp \
+  adsApp/src/adsParameter.cpp \
+  adsApp/src/adsAsynPortDriverUtils.cpp\
   ${ADSSOURCES}
 
 
