--- a/Makefile.EEE
+++ b/Makefile.EEE
@@ -46,6 +46,7 @@ TEMPLATES = \
   adsApp/Db/adsTest.db\
   adsApp/Db/adsTestAsyn.db\
   adsApp/Db/adsTestAsynSlim.db\
+  adsApp/Db/adsTestAsynSlimArray.db\
 
 
 
