configure/RELEASE: Use .local files
Make the RELEASE file more versatile:
Use definitions from local files like this:

include $(TOP)/configure/RELEASE_PATHS.local
-include $(TOP)/configure/RELEASE_PATHS.local.$(EPICS_HOST_ARCH)
include $(TOP)/configure/RELEASE_LIBS.local
-include $(TOP)/configure/RELEASE.local

(I think I stole the idea from another EPICS module, probably
 from AreaDetector)

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@ adsApp/src/Debug
 bin/
 builddir/
 configure/O.*
+configure/RELEASE_LIBS.local
+configure/RELEASE_PATHS.local
 db/
 dbd/
 iocBoot/iocads/
