--- a/adsApp/Db/Makefile
+++ b/adsApp/Db/Makefile
@@ -11,7 +11,8 @@ include $(TOP)/configure/CONFIG
 # Create and install (or just install) into <top>/db
 # databases, templates, substitutions like this
 #DB += xxx.db
-DB += adsGeneral.template
+DB += adsTestOctet.db
+DB += adsTestAsyn.db
 
 #----------------------------------------------------
 # If <anyname>.db template is not named <anyname>*.template add
