--- a/adsExApp/src/Makefile
+++ b/adsExApp/src/Makefile
@@ -16,7 +16,7 @@ DBD += adsExApp.dbd
 # ads.dbd will be made up from these files:
 adsExApp_DBD += base.dbd
 adsExApp_DBD += asyn.dbd
-adsExApp_DBD += adsSupport.dbd
+adsExApp_DBD += ads.dbd
 
 # Build the main IOC entry point on workstation OSs.
 adsExApp_SRCS += adsExApp_registerRecordDeviceDriver.cpp
@@ -24,7 +24,7 @@ adsExApp_SRCS_DEFAULT += adsMain.cpp
 adsExApp_SRCS_vxWorks += -nil-
 
 adsExApp_LIBS += asyn
-adsExApp_LIBS += adsSupport
+adsExApp_LIBS += ads
 # Finally link to the EPICS Base libraries
 adsExApp_LIBS += $(EPICS_BASE_IOC_LIBS)
 
