test/example files should be under ExApp
Alex:
renamed:    adsApp/Db/adsTest.proto -> adsExApp/Db/adsTest.proto
renamed:    adsApp/Db/adsTestAsyn.db -> adsExApp/Db/adsTestAsyn.db
renamed:    adsApp/Db/adsTestOctet.db -> adsExApp/Db/adsTestOctet.db

Torsten:
modified:   Makefile.EEE

--- a/Makefile.EEE
+++ b/Makefile.EEE
@@ -37,7 +37,7 @@ SOURCES = \
 
 
 TEMPLATES = \
-  adsApp/Db/adsTestOctet.db\
-  adsApp/Db/adsTestAsyn.db\
+  adsExApp/Db/adsTestOctet.db\
+  adsExApp/Db/adsTestAsyn.db\
 
 
