Take ADS/ from europeanspallationsource
Make it possible to maintain "our own fork" of the ADS lib:
Take the submodule from github.com/EuropeanSpallationSource/ADS
Rename the ADS/ into BeckhoffADS/ to avoid problems with Git
when a submodule is added/deleted and old commits are checked out.

Adjust all the Makefiles.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,6 @@
-[submodule "ADS"]
-	path = ADS
-	url = https://github.com/Beckhoff/ADS.git
-	branch = 7df1d60f8bf088a2be718323d27aa2156f7d7b0f
 [submodule "TwinCATexample"]
 	path = TwinCATexample
 	url = https://torstenbogershausen@bitbucket.org/europeanspallationsource/tc_ads_example.git
+[submodule "BeckhoffADS"]
+	path = BeckhoffADS
+	url = https://github.com/EuropeanSpallationSource/ADS
