--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@ bin/
 builddir/
 configure/O.*
 configure/RELEASE_LIBS.local
-configure/RELEASE_PATHS.local
+configure/RELEASE_PATHS.local*
 db/
 dbd/
 iocBoot/
