--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+
 *.bak
 *.pyc
 *~
@@ -6,8 +7,26 @@ TwinCAT/demo_project/MCAG_Base_Project/_Boot*
 TwinCAT/demo_project/MCAG_Base_Project/_Configure*
 \#*#
 adsApp/Db/O.*
+adsApp/src/ADS_FROM_BECKHOFF_SUPPORTSOURCES.mak
+adsApp/src/AdsDef.cpp
+adsApp/src/AdsDevice.cpp
+adsApp/src/AdsFile.cpp
+adsApp/src/AdsLib.cpp
+adsApp/src/AmsConnection.cpp
+adsApp/src/AmsNetId.cpp
+adsApp/src/AmsPort.cpp
+adsApp/src/AmsRouter.cpp
 adsApp/src/Debug
+adsApp/src/Frame.cpp
+adsApp/src/LicenseAccess.cpp
+adsApp/src/Log.cpp
+adsApp/src/NotificationDispatcher.cpp
 adsApp/src/O.*
+adsApp/src/RTimeAccess.cpp
+adsApp/src/RegistryAccess.cpp
+adsApp/src/RouterAccess.cpp
+adsApp/src/Sockets.cpp
+adsApp/src/SymbolAccess.cpp
 adsExApp/Db/O.*
 adsExApp/src/O.*
 bin/
