Re-add Beckhoff code under ADS/
Re-add the git submodule under ADS/, taking the upstream repo
Changes to be committed:
    modified:   .gitmodules
    new file:   ADS
    modified:   Makefile
    modified:   adsApp/src/Makefile
    modified:   tools/downloadADS.sh

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "TwinCATexample"]
 	path = TwinCATexample
 	url = https://torstenbogershausen@bitbucket.org/europeanspallationsource/tc_ads_example.git
+[submodule "ADS"]
+	path = ADS
+	url = https://github.com/Beckhoff/ADS
