--- a/adsApp/src/Makefile
+++ b/adsApp/src/Makefile
@@ -7,7 +7,7 @@ include $(TOP)/configure/CONFIG
 
 USR_CXXFLAGS += -std=c++11
 USR_CXXFLAGS += -DCONFIG_DEFAULT_LOGLEVEL=1
-USR_CPPFLAGS += -I ../../../BeckhoffADS/AdsLib/
+USR_CPPFLAGS += -I ../../../ADS/AdsLib/
 USR_LDFLAGS  += -lpthread
 
 #=============================
